@@ -55,7 +55,7 @@ public class LdiNumberConversionUtil {
             if (i != null) {
                 return i;
             }
-            return new Integer(0);
+            return Integer.valueOf(0);
         } else if (type == double.class) {
             Double d = LdiDoubleConversionUtil.toDouble(o);
             if (d != null) {
@@ -67,7 +67,7 @@ public class LdiNumberConversionUtil {
             if (l != null) {
                 return l;
             }
-            return new Long(0);
+            return Long.valueOf(0L);
         } else if (type == float.class) {
             Float f = LdiFloatConversionUtil.toFloat(o);
             if (f != null) {
